 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 2.1
=============

* [cdunde]: Model Editor, Added new functions to 'Views Options' to set the model's mesh lines color
          - and draw in frame selection.

* [cdunde]: Substantially increased the drawing speed of the Model Editor Skin-view mesh lines and handles.

* [cdunde]: Model Editor, New methods to stop over draw of handles causing massive program slow down.

* [cdunde]: Model Editor, Changed picked vertex functions to much faster drawing method.

* [cdunde]: Fixed individual view modelfill color to display correctly during a model mesh vertex drag.

* [cdunde]: Fixed error message when in the Skin-view after a new triangle is added.

* [cdunde]: Fixed model mesh drag guide lines not always displaying during a drag.
          - Fixed gridscale to display in all 2D view(s) during pan (scroll) or drag.

* [cdunde]: Added the 2D views gridscale function to the Model Editor's Options menu.

* [cdunde]: Model Editor, increased drawing speed of Skin-view during drag and fix picked vertexes for
          - snapping to base location if dragged in the Skin-view before the action is completed.

* [DanielPharos/cdunde]: Added game support for EF2 (Elite Force 2), .md3 model and .dds image format support.

* [cdunde]: Model Editor, added new functions for aligning, single and multi selections, Skin-view vertexes.
          - Also added a new and complete section to the Infobase on its use with editor menu links.

* [cdunde]: Model Editor, revamp of entire new vertex and triangle creation, picking and removal system
          - as well as its code relocation to proper file and elimination of unnecessary code.
